# StickPlayServer

./: .dockerignore  .gitignore  Dockerfile  README.md  build_docker.ps1  index.html  package-lock.json  package.json  tailwind.config.js
.agents/workflows/: build-img.md
StickPlayApp/: README.md  project.yml
StickPlayApp/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
StickPlayApp/Sources/: APIService.swift  ContentView.swift  EditVideoView.swift  Models.swift  MoveFolderView.swift  SettingsView.swift  StickPlayApp.swift  VideoCard.swift
StickPlayApp/StickPlayApp.xcodeproj/: project.pbxproj
StickPlayApp/StickPlayApp.xcodeproj/project.xcworkspace/xcuserdata/curtis.xcuserdatad/: UserInterfaceState.xcuserstate
StickPlayApp/StickPlayApp.xcodeproj/xcuserdata/curtis.xcuserdatad/xcschemes/: xcschememanagement.plist
config/: lib_1773392085472.db  lib_1773395097482.db  libraries.json  stickplay.db
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  build_error.txt  error.json  error.txt  error2.json  error_log.txt  global_log.txt  out.txt  output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  database.rs  lib.rs  main.rs  models.rs  parser.rs  scanner.rs
src/components/: EditVideoModal.tsx  FolderPickerModal.tsx  Footer.tsx  Header.tsx  ManualCropModal.tsx  MoveFolderModal.tsx  SettingsPage.tsx  Toast.tsx  VideoCard.tsx  VideoGrid.tsx
