[package]
name = "stickplay"
version = "1.1.1"
description = "StickPlay 影片管理資料庫"
authors = ["huachun"]
edition = "2021"
default-run = "stickplay"

[lib]
name = "stickplay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
quick-xml = "0.37"
regex = "1"
open = "5"
walkdir = "2"
image = "0.25"
urlencoding = "2.1.3"
base64 = "0.22.1"
rustface = "0.1.7"
notify = "6.1.1"
futures-util = "0.3"
